--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" th:replace="~{base:: parent(~{::#content}, ~{::title}, ~{})}">
+<html lang="en" th:replace="~{base:: parent(~{::#content}, ~{::title}, ~{::script})}">
 <head>
    <title>All Contacts</title>
 </head>
@@ -90,9 +90,11 @@
                               </div>
                            </td>
                            <td class="px-6 py-4">
-                              <i class="fa-solid fa-trash w-6 h-6"></i>
-                              <i class="fa-solid fa-pen w-6 h-6"></i>
-                              <i class="fa-solid fa-eye w-6 h-6"></i>
+                              <div>
+                                 <i class="fa-solid fa-trash w-6 h-6"></i>
+                                 <i class="fa-solid fa-pen w-6 h-6"></i>
+                                 <button th:onclick="loadContactData([[${contact.id}]])"><i class="fa-solid fa-eye w-6 h-6"></i></button>
+                              </div>
                            </td>
                      </tr>
                   </tbody>
@@ -131,9 +133,11 @@
 
          </div>
 
+         <div th:replace="~{user/contact_modal:: contact}"></div>
 
       </div>
 
    </div>
+   <script th:src="@{/js/contact.js}"></script>
 </body>
 </html>
